fixed overlapping ships

--- a/src/square.css
+++ b/src/square.css
@@ -16,7 +16,7 @@
     width: 65px;
     height: 65px;
     border: 1px solid black;
-    background-color: skyblue;
+    background-color: red;
 }
 
 .cell {
@@ -31,4 +31,8 @@
 
 .fa-bomb {
     color: red;
+}
+
+.fa-ship {
+    color: rgb(44, 135, 192);
 }
